--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "simple-livereload-seed",
   "version": "0.0.0",
-  "description": "Simple livereload seed for testing",
+  "description": "Simple livereload seed for prototyping",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-watch": "^0.6.1",
